adhi-parsing almost done

--- a/cub3d/Makefile
+++ b/cub3d/Makefile
@@ -6,13 +6,13 @@
 #    By: adshafee <adshafee@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/22 15:31:19 by esimpson          #+#    #+#              #
-#    Updated: 2024/09/22 12:49:27 by adshafee         ###   ########.fr        #
+#    Updated: 2024/10/03 14:21:55 by adshafee         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = cub3d
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -fsanitize=address -g3 
+CFLAGS = -Wall -Wextra -Werror -fsanitize=address -g3
 # CFLAGS = -Wall -Wextra -Werror -fsanitize=address -g3 
 
 LIBFT = ./library/libft/libft.a
@@ -22,6 +22,8 @@ PRINTF = ./library/libftprintf/libftprintf.a
 SRC_PATH = ./src
 SRC_FILES = $(SRC_PATH)/main.c $(SRC_PATH)/parse.c $(SRC_PATH)/extention_check.c \
             $(SRC_PATH)/struct_init.c $(SRC_PATH)/texture_validator.c $(SRC_PATH)/texture_validator2.c \
+			$(SRC_PATH)/color_validator.c $(SRC_PATH)/map_validator.c $(SRC_PATH)/map_checks.c \
+			$(SRC_PATH)/dfs.c
 
 OBJ_FILES = $(SRC_FILES:.c=.o)
 
